# ctf-skill-pack

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  PACKAGE_MANIFEST.txt  PACKAGING.md  README.md  TODO.md  pyproject.toml
bibi/: pyproject.toml
bibi/src/bibi/: __init__.py  app.py  cli.py  config.py  extractor.py  llm.py
bibi/tests/: test_app.py  test_config.py  test_extractor.py
binary-pwn/: SKILL.md
biobrain2/: README.md  USAGE.md  pyproject.toml
biobrain2/biobrain/: __init__.py  __main__.py  cli.py
biobrain2/biobrain/action/: __init__.py
biobrain2/biobrain/agents/: __init__.py  benchmark.py
biobrain2/biobrain/attention/: __init__.py
biobrain2/biobrain/cognition/: __init__.py  router.py
biobrain2/biobrain/cognition/adapters/: __init__.py  llm.py
biobrain2/biobrain/config/: __init__.py
biobrain2/biobrain/core/: __init__.py  audit.py  enums.py  events.py  signals.py  trace.py
biobrain2/biobrain/domain/: __init__.py  cyberrange.py  dev_tools.py  pentest_tools.py  playbooks.py
biobrain2/biobrain/executive/: __init__.py
biobrain2/biobrain/feedback/: __init__.py
biobrain2/biobrain/identity/: __init__.py
biobrain2/biobrain/ingest/: __init__.py
biobrain2/biobrain/memory/: __init__.py
biobrain2/biobrain/memory/adapters/: __init__.py  mempalace.py
biobrain2/biobrain/modulation/: __init__.py
biobrain2/biobrain/ops/: __init__.py  export.py  tracing.py
biobrain2/biobrain/perception/: __init__.py
biobrain2/biobrain/runtime/: __init__.py  orchestrator.py  pipeline.py  repl.py  session.py
biobrain2/biobrain/safety/: __init__.py
biobrain2/configs/: biobrain-multimodel.yaml  biobrain.yaml  identity_phantom.yaml
biobrain2/configs/playbooks/: owasp_auth_testing.yaml
biobrain2/tests/: test_agentic.py  test_biobrain.py  test_phase4.py  test_phase56.py  test_repl.py  test_tools_tracing.py  test_wave3.py
cms_runtime/: README.md  pyproject.toml
cms_runtime/requirements/: base.txt  dev.txt  research.txt
cms_runtime/scripts/: bootstrap_db.py
cms_runtime/src/cms/: __init__.py
cms_runtime/src/cms/l1/: __init__.py  adapter.py  observation.py  service.py
cms_runtime/src/cms/l2/: __init__.py  episode.py  policies.py  service.py
cms_runtime/src/cms/l3/: __init__.py  belief.py  belief_events.py  belief_explanation.py  belief_policy.py  belief_service.py  evidence.py  rules.py  service.py
cms_runtime/src/cms/migration/: __init__.py  from_cms_point.py
cms_runtime/src/cms/runtime/: __init__.py  assembler.py  engine.py  retrieval.py  state.py
cms_runtime/src/cms/storage/: __init__.py  base.py  belief_store.py  episode_store.py  evidence_store.py  observation_store.py  schema.py  sqlite.py
cms_runtime/tests/integration/: test_belief_pipeline.py  test_engine_pipeline.py  test_evidence_pipeline.py  test_observation_equivalence.py  test_state_assembly.py
cms_runtime/tests/unit/: test_adapter.py  test_assembler.py  test_belief.py  test_belief_events.py  test_belief_explanation.py  test_belief_policy.py  test_belief_service.py  test_belief_store.py  test_episode.py  test_episode_service.py  test_episode_store.py  test_evidence.py  test_evidence_service.py  test_evidence_store.py  test_migration.py  test_observation.py  test_observation_store.py  test_policies.py  test_retrieval.py  test_rules.py  test_scoped_beliefs.py  test_service.py  test_state.py  test_supersession.py
crypto-attack/: SKILL.md
ctf-orchestrator/: SKILL.md
deepsearcher/: SKILL.md
exploit-sandbox/: SKILL.md
flag-discipline/: SKILL.md
forensics/: SKILL.md
integrations/: __init__.py
jail-escape/: SKILL.md
misc/: SKILL.md
osint/: SKILL.md
researcher/: SKILL.md
reverse/: DECISION_TREE.yaml  REFERENCE.md  SKILL.md  TECHNIQUES.yaml
runtime/: README.md  docker-compose.yml  pytest.ini  requirements.txt
shared/: schemas.md
stego/: SKILL.md
web-exploit/: SKILL.md
(+51 files in other folders)
