[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctf-skill-pack"
version = "0.1.0"
description = "CTF skill pack runtime and orchestration layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiokafka>=0.11",
  "biobrain @ file:///home/lupise/ctf-skill-pack/ctf-skill-pack/biobrain2",
  "cms-runtime @ file:///home/lupise/ctf-skill-pack/ctf-skill-pack/cms_runtime",
  "redis>=5.0",
  "pydantic>=2.6",
  "openai>=1.30",
  "pyyaml>=6.0",
]

[project.scripts]
ctfrt = "ctfrt.cli:main"

[tool.setuptools]
package-dir = {"" = "runtime"}

[tool.setuptools.packages.find]
where = ["runtime"]
