[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bibi"
version = "0.1.0"
description = "Note-taking companion built on the CMS runtime — evidence-shape prototype, not production assistant"
requires-python = ">=3.11"
dependencies = [
    "cms-runtime",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = [
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[project.scripts]
bibi = "bibi.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/bibi"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
