[project]
name = "biobrain"
version = "0.7.0"
description = "Biologically-inspired modular cognitive runtime kernel with MemPalace memory"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Pylo @ LUPISE"}]

dependencies = [
    "mempalace>=3.1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
biobrain = "biobrain.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["biobrain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
